# alto

./: .gitignore  Cargo.toml  README.md  user_list.txt
print_server/: Cargo.toml
print_server/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
web_faxer/: Cargo.toml  web_faxer.db
web_faxer/src/: main.rs
web_faxer/templates/: index.html  message_form.html  success.html
