[package]
name = "printer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", features = ["std"], default-features = false }


chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
escpos = {version = "0.15.2", default-features = false, features = ["native_usb"]}
