[package]
name = "print_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"], default-features = false }

escpos = {version = "0.15.2", default-features = false, features = ["native_usb"] }

types = { path = "../types" }
